# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Changes to be committed: #   (use "git reset HEAD <file>..." to unstage) # #	modified:   app/models/Migrations.scala #	modified:   app/models/User.scala #

--- a/app/views/PlanTravel/tripReturn.scala.html
+++ b/app/views/PlanTravel/tripReturn.scala.html
@@ -7,18 +7,18 @@
 	<div class="row">
 	    <div class="col-sm-12 form-group">
 	        <label for="name"> Return Location </label>
-	        <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+	        <input class="form-control input-lg" type="text" id="name" name="ret_location" value="" placeholder="">
 	    </div>
 	</div>
 
 	<div class="row">
 	    <div class="col-sm-6 form-group">
 	        <label for="name"> Return Date </label>
-	        <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+	        <input class="form-control input-lg" type="text" id="name" name="ret_Date" value="" placeholder="">
 	    </div>
 	    <div class="col-sm-6 form-group">
 	        <label for="name"> Return Time </label>
-	        <input class="form-control input-lg" type="text" id="name" name="name" value="" placeholder="">
+	        <input class="form-control input-lg" type="text" id="name" name="ret_time" value="" placeholder="">
 	    </div>
 	</div>
 
