--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -5,28 +5,25 @@
              <div class='navbar-header'>
                  <a href='#' class='grove-toggle' data-toggle='collapse' data-target='.grove-nav'>   <i class='glyphicons show_lines'></i>  </a>
                  <a href='index.html' class='navbar-brand'><img src='@routes.Assets.at("images/cetLogo.png")' alt='CET'></a>
-                 </div>
-                 <div class='collapse navbar-collapse grove-nav'>
+             </div>
+             <div class='collapse navbar-collapse grove-nav'>
                  <ul class='nav navbar-nav'>
-                 <li class='active'>
-                 <a href='index.html'>Home</a>
-                 </li>
-                 <li class='dropdown'>
-                 <a href='#' data-toggle='dropdown'>Pages <b class='caret'></b></a>
-                 <ul class='dropdown-menu'>
-                     <li><a href='about-us.html'>About Us</a></li>
-                     <li><a href='features.html'>Features Page</a></li>
-                     <li><a href='faq.html'>FAQ</a></li>
-                     <li><a href='login.html'>Login/Signup</a></li>
-                     <li><a href='contact.html'>Contact</a></li>
+
+                    <li class='active'> <a href='index.html'>Home</a> </li>
+
+                    <li class='dropdown'>
+                        <a href='#' data-toggle='dropdown'>Pages <b class='caret'></b></a>
+						<ul class='dropdown-menu'>
+							<li><a href='about-us.html'>About Us</a></li>
+							<li><a href='features.html'>Features Page</a></li>
+							<li><a href='faq.html'>FAQ</a></li>
+							<li><a href='login.html'>Login/Signup</a></li>
+							<li><a href='contact.html'>Contact</a></li>
+						</ul>
+                    <li class='inactive'><a href="@routes.Authentication.logout()">@logout</a></li>
                  </ul>
-                 <li class='inactive'>
-                 <a href="@routes.Application.logout()">@logout</a>
-                 </li>
-             </li>
-             </ul>
+             </div>
          </div>
-      </div>
      </nav>
         <div class="widewrapper pagetitle">
             <div class="container">
