--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -13,7 +13,7 @@
             Please fill out the text fields below.
         </p>
 
-        @form(routes.Application.authenticate) {
+        @form(routes.Authentication.authenticate) {
 
         <form action="#"  method="get" >
             <div class="row">
@@ -65,7 +65,7 @@
             Please fill out the text fields below.
         </p>
 
-        @form(routes.Application.register) {
+        @form(routes.Authentication.register) {
 
         <form action="#"  method="get" >
             <div class="row">
