removing a logout string that wasn't make much sense

--- a/app/views/Dashboard/dashboard.scala.html
+++ b/app/views/Dashboard/dashboard.scala.html
@@ -1,5 +1,5 @@
 @()
-@main(pageTitle = "Dashboard")(logout = "Logout") {
+@main(pageTitle = "Dashboard") {
 
     <div class="widewrapper dashboard">
         <div class="container content">
