--- a/app/views/aboutus.scala.html
+++ b/app/views/aboutus.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main(pageTitle = "About Us")(logout = "") {
+@main(pageTitle = "About Us") {
 
     KDSAHBCKSAB,SJBC
     SADMJCBVSAJHBCKSAN
