--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String, users:List[User])
 
-@main("Welcome to Play")(logout = "Logout") {
+@main("Welcome to Play") {
 
     @message
     @users.map{ user =>
