--- a/app/views/landingpage.scala.html
+++ b/app/views/landingpage.scala.html
@@ -1,6 +1,6 @@
 @()
 
-@main("Welcome to Play")(logout = "Logout") {
+@main("Welcome to Play") {
 
               KDSAHBCKSAB,SJBC
     SADMJCBVSAJHBCKSAN
