--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -2,7 +2,7 @@
 
 @import views.html.helper._
 
-@main(pageTitle = "Login / Sign Up")(logout = "") {
+@main(pageTitle = "Login / Sign Up"){
 
 <div class="widewrapper">
     <div class="container login">
