modifying header  for login and logout access. Letting  the logged user acessible in the views.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(pageTitle: String = "Page Title")(content: Html)
+@( pageTitle: String = "Page Title")(content: Html)(implicit user:Option[User] = None)
 
 <!DOCTYPE html>
 
