--- a/app/views/PlanTravel/travelPlanner.scala.html
+++ b/app/views/PlanTravel/travelPlanner.scala.html
@@ -1,6 +1,5 @@
-@()
+@()(implicit user:Option[User])
 @main(pageTitle = "Travel Planner") {
-
     <div class="widewrapper">
 	    <div class="container content">
 	        <div class="row">
