--- a/app/views/header.scala.html
+++ b/app/views/header.scala.html
@@ -1,4 +1,4 @@
-@(pageTitle: String)
+@(pageTitle: String)(implicit user:Option[User])
 <header>
     <nav class='navbar navbar-default grove-navbar' role='navigation'>
          <div class='container'>
@@ -9,7 +9,7 @@
              <div class='collapse navbar-collapse grove-nav'>
                  <ul class='nav navbar-nav'>
 
-                    <li class='active'> <a href='index.html'>Home</a> </li>
+                    <li class='inactive'> <a href='index.html'>Home</a> </li>
 
                     <li class='dropdown'>
                         <a href='#' data-toggle='dropdown'>Pages <b class='caret'></b></a>
@@ -20,7 +20,13 @@
 							<li><a href='login.html'>Login/Signup</a></li>
 							<li><a href='contact.html'>Contact</a></li>
 						</ul>
-                    <li class='inactive'><a href="@routes.Authentication.logout()">Logout</a></li>
+                        @if(user.isDefined){
+							<li class='active'>Logged as @user.get.name (<a class="logout-link" href="@routes.Authentication.logout()">logout</a>)</li>
+                        }else{
+		                     <li class='inactive'>
+		                         <a href="@routes.Authentication.login()">Login</a>
+		                     </li>
+                        }
                  </ul>
              </div>
          </div>
