styling and ficing small bugs on travel response UI

--- a/app/views/TravelPlanResponse/travelPlan.scala.html
+++ b/app/views/TravelPlanResponse/travelPlan.scala.html
@@ -6,12 +6,13 @@
 
             @flight()
 
-            <div class="row">
-                <div class="col-sm-12 form-group centralize">
-                    <div class="btn btn-grove-one btn-lg add-flight-action" data-parent=".flights" data-url="@routes.TravelPlanner.flightView"><i class="glyphicons plus"></i> Add another flight </div>
-                </div>
-            </div>
         </div>
+
+        <div class="row">
+	        <div class="col-sm-12 form-group centralize">
+	            <div class="btn btn-grove-one btn-lg add-flight-action" data-parent=".plan" data-target=".flights" data-url="@routes.TravelPlanner.flightView"><i class="glyphicons plus"></i> Add another flight </div>
+	        </div>
+	    </div>
 
         <hr/>
 
