--- a/app/views/TravelPlanResponse/travelResponse.scala.html
+++ b/app/views/TravelPlanResponse/travelResponse.scala.html
@@ -19,7 +19,7 @@
                         </div>
 
 
-                        <button type="submit" class="btn btn-grove-one btn-xlg btn-bold pull-right"> Send Message </button>
+                        <button type="submit" class="btn btn-grove-one btn-xlg btn-bold pull-right"> Submit Response </button>
 
                     </form>
                 </section>
