animation in displaying new flights forms.

--- a/app/views/TravelPlanResponse/flight.scala.html
+++ b/app/views/TravelPlanResponse/flight.scala.html
@@ -1,6 +1,6 @@
 @(flightNumber:Int = 1, open:Boolean = true, hidden:Boolean = true)
 
-<div class="flight " data-number="@flightNumber">
+<div class="flight @if(hidden){ temp-hide }" data-number="@flightNumber">
     <a href="#fligh@flightNumber" class="accordion-toggle open " data-toggle="collapse">Flight #<span class="flight-number-id">@flightNumber</span></a>
 
 	<div id="flight@flightNumber" class="accordion-collapse collapse in">
