--- a/app/views/TravelPlanResponse/travelPlan.scala.html
+++ b/app/views/TravelPlanResponse/travelPlan.scala.html
@@ -4,7 +4,7 @@
     <div class="col-md-offset-1 col-md-10 plan">
         <div class="flights">
 
-            @flight()
+            @flight(hidden = false)
 
         </div>
 
