adding the trip view dynamically

--- a/app/views/TravelPlanResponse/travelPlan.scala.html
+++ b/app/views/TravelPlanResponse/travelPlan.scala.html
@@ -11,5 +11,13 @@
 
     </div>
 
+    <hr/>
+
+    <div class="row">
+        <div class="col-sm-12 form-group centralize">
+            <div class="btn btn-grove-one btn-lg add-response-trip-action" data-parent=".plan" data-target=".trips" data-url="@routes.TravelPlanner.responseTrip"><i class="glyphicons plus"></i> Add another trip </div>
+        </div>
+    </div>
+
 </div>
 
