--- a/app/views/TravelPlanResponse/trip.scala.html
+++ b/app/views/TravelPlanResponse/trip.scala.html
@@ -14,7 +14,7 @@
 
     <div class="row">
         <div class="col-sm-12 form-group centralize">
-            <div class="btn btn-grove-one btn-lg add-flight-action" data-parent=".plan" data-target=".flights" data-url="@routes.TravelPlanner.flightView"><i class="glyphicons plus"></i> Add another flight </div>
+            <div class="btn btn-grove-one btn-lg add-flight-action" data-parent=".trip" data-target=".flights" data-url="@routes.TravelPlanner.flightView"><i class="glyphicons plus"></i> Add another flight </div>
         </div>
     </div>
 
@@ -82,5 +82,4 @@
 
     </div>
 
-    <hr/>
 </div>
