--- a/app/views/TravelPlanResponse/plan.scala.html
+++ b/app/views/TravelPlanResponse/plan.scala.html
@@ -4,9 +4,9 @@
 
     <div class="accordion-toggle @if(open){ open }else{ collapsed }  " data-toggle="collapse">Plan #<span class="plan-number-id">@planNumber</span></div>
 
-    <div class="col-md-offset-1 col-md-10 accordion-collapse collapse @if(open){ in } ">
+    <div class="accordion-collapse collapse @if(open){ in } ">
 
-        <div class="trips">
+        <div class="trips ">
 
            @trip(hidden = false)
 
