--- a/app/views/RightSidebar/contactInfo.scala.html
+++ b/app/views/RightSidebar/contactInfo.scala.html
@@ -3,23 +3,24 @@
 
     <div class="detail-block">
 
-		<h3> Lorem Ipsum Dolor Amet </h3>
+		<h3> Char Black, CET Services Inc. </h3>
 			<p>
-			    Ada banyak versi dari mukasurat-mukasurat Lorem Ipsum yang sedia ada, tetapi kebanyakkannya telah diubahsuai, lawak jenaka diselitkan, atau yat ayat yang di sertakan secara rambang yang lansung tidak munasabah. Jika anda ingin.
+			    I am here to provide you exceptional service 24 hours a day, seven days a week.
 			</p>
 		</div>
 
     <div class="detail-block">
 
-        <h3> More Info </h3>
+        <h3> Contact Info </h3>
 
         <div class="info-block">
 
-            <i class="glyphicons home"></i>
+            <i class="glyphicons envelope"></i>
 
             <div class="info">
-                <h5> Address: </h5>
-                <p> St. Pauli Fischmarkt, 20359 Hamburg, Germany </p>
+                <h5> Email Address: </h5>
+                <p> jcharleneblack&#64;gmail.com </p>
+                <p> cetservicesinc&#64;gmail.com </p>
             </div>
 
         </div>
@@ -30,9 +31,17 @@
 
             <div class="info">
                 <h5> Telephone: </h5>
-                <p> +41 974 545 247 </p>
+                <p> (435) 669-3528 </p>
             </div>
 
+        </div>
+
+        <div class="info-block">
+            <i class="social skype"></i>
+            <div class="info">
+                <h5>Skype:</h5>
+                <p>mySkypeName</p>
+            </div>
         </div>
 
         <div class="info-block">
@@ -41,13 +50,7 @@
 
             <div class="info business-hours">
                 <h5> Business Hours: </h5>
-                <p> Monday 8-17 </p>
-                <p> Tuesday 8-17 </p>
-                <p> Wednesday 8-20 </p>
-                <p> Thursday 8-17 </p>
-                <p> Friday 8-16 </p>
-                <p> Saturday 8-12 </p>
-                <p> Sunday closed </p>
+                <p> 24 Hours a Day, Seven Days a Week </p>
             </div>
 
         </div>
