# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Changes to be committed: #   (use "git reset HEAD <file>..." to unstage) # #	modified:   app/models/Migrations.scala #	modified:   app/models/User.scala #

--- a/app/views/PlanTravel/tripReturn.scala.html
+++ b/app/views/PlanTravel/tripReturn.scala.html
@@ -14,7 +14,7 @@
 	<div class="row">
 	    <div class="col-sm-6 form-group">
 	        <label for="name"> Return Date </label>
-	        <input class="form-control input-lg" type="text" id="name" name="ret_Date" value="" placeholder="">
+	        <input class="form-control input-lg" type="text" id="name" name="ret_date" value="" placeholder="">
 	    </div>
 	    <div class="col-sm-6 form-group">
 	        <label for="name"> Return Time </label>
