--- a/app/views/PlanTravel/travelPlanner.scala.html
+++ b/app/views/PlanTravel/travelPlanner.scala.html
@@ -32,7 +32,7 @@
                         <div class="row">
                             <div class="col-sm-12 form-group">
                                 <label for="message"> Notes </label>
-                                <textarea class="form-control " id="message" name="message" rows="5"></textarea>
+                                <textarea class="form-control " id="message" name="notes" rows="5"></textarea>
                             </div>
                         </div>
 
